<resources>
    <string name="app_name">Antrip</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">비밀번호</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="welcome">어서오세요! </string>
    <string name="invalid_email">유효한 이메일이 아닙니다</string>
    <string name="invalid_password">비밀번호는 5자 이상이어야합니다.</string>
    <string name="login_failed">로그인 실패</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_profile">내 정보</string>
    <string name="menu_contact">문의하기</string>
    <string name="menu_manage">설정</string>
    <string name="menu_notice">공지사항</string>
    <string name="fail_notice">공지사항을 불러올 수 없습니다.</string>
    <string name="notice_title_hint">공지사항 제목을 입력하세요.</string>
    <string name="notice_content_hint">내용을 입력하세요.</string>


    <!-- Preference Titles -->
    <string name="travel_header">여행</string>
    <string name="service_header">서비스</string>

    <!-- Messages Preferences -->
    <string name="downloaded_travel_title">다운로드한 여행</string>

    <!-- Sync Preferences -->
    <string name="alert_title">푸시 알람 받기</string>
    <string name="add_alert_title">공지사항 알람 받기</string>
    <string name="add_alert_summary_on">여행 정보 외의 공지사항 알림도 받습니다</string>
    <string name="add_alert_summary_off">여행 정보 외에는 어떠한 알림도 받지 않습니다</string>
    <string name="action_sign_up">아직 계정이 없으신가요? 회원가입</string>
    <string name="menu_travel">내 여행</string>
    <string name="menu_search">검색하기</string>
    <string name="empty_travel">다운로드한 여행이 없습니다</string>
    <string name="login_header">로그인</string>
    <string name="login_account_title">로그인 정보</string>
    <string name="auto_login_title">자동 로그인</string>
    <string name="menu_communicate">커뮤니케이션</string>
    <string name="logout_title">로그아웃</string>
    <string name="open_source_title">오픈소스 라이선스</string>
    <string name="system_header">시스템</string>
    <string name="action_sign_up_short">회원가입</string>
    <string name="prompt_password_check">비밀번호 확인</string>
    <string name="prompt_birth">생일</string>
    <string name="prompt_name">닉네임, 이름</string>
    <string name="prompt_temp">임시 구현</string>
    <string name="action_search_account_short">계정찾기</string>
    <string name="action_search_account">비밀번호를 잊으셨나요?</string>
    <string name="app_license" translatable="false">License</string>
    <string name="title_activity_travel_info" translatable="false">TravelInfoActivity</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">설정</string>
    <string name="title_activity_profile" translatable="false">Profile</string>
    <string name="default_notification_channel_id" translatable="false">antrip</string>
    <string name="default_notification_channel_name" translatable="false">antrip</string>
    <string name="wrongEmail" translatable="false">이메일을 확인해주세요</string>
    <string name="wrongPassword" translatable="false">비밀번호를 확인해주세요</string>
    <string name="wrongName" translatable="false">이름을 확인해주세요</string>
    <string name="wrongBirth" translatable="false">생년월일을 확인해주세요</string>
    <string name="title_activity_travel_planner">Map</string>
    <string name="wrongNetwork">네트워크 상태를 확인해주세요</string>
    <string name="wrongPermissions">설정에서 앱의 권한을 허용해주세요</string>
    <string name="wrongPwLength">비밀번호는 5자 이상이여야 합니다.</string>
    <string name="app_version_title">어플리케이션 버전</string>
    <string name="action_edit_profile">프로필 변경</string>
    <string name="prompt_code">인증번호</string>
    <string name="prompt_send">보내기</string>
    <string name="prompt_confirm">확인</string>
    <string name="success">완료되었습니다</string>
    <string name="prompt_plan">일정</string>



    <string name="choice_place">장소 선택</string>
    <string name="accommodation">숙소</string>
    <string name="cancel">취소</string>
    <string name="save">저장</string>
    <string name="calculation">계산</string>
    <string name="name">name</string>
    <string name="share">공유</string>
    <string name="country">country</string>
    <string name="edit">Edit</string>
    <string name="translate">번역</string>
    <string name="mainTopText">환영합니다.\n어떤 곳을 가고싶으신가요?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommendTrip">이런곳은 어떠신가요?</string>
    <string name="add">추가</string>
    <string name="auth_add_share">공유하기</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
