<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_layout">

    <PreferenceCategory app:title="@string/login_header">

        <Preference
            android:icon="@drawable/ic_menu_profile"
            app:key="login_account"
            app:title="@string/login_account_title">
            <intent
                android:targetClass="teamprj.antrip.ui.ProfileActivity"
                android:targetPackage="teamprj.antrip" />
        </Preference>

        <Preference
            android:onClick="btn_logout"
            app:key="logout"
            app:title="@string/logout_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/travel_header">

        <Preference
            app:key="downloaded_travel"
            app:title="@string/downloaded_travel_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/service_header">

        <SwitchPreferenceCompat
            app:key="alert"
            app:title="@string/alert_title" />

        <SwitchPreferenceCompat
            app:dependency="alert"
            app:key="add_alert"
            app:summaryOff="@string/add_alert_summary_off"
            app:summaryOn="@string/add_alert_summary_on"
            app:title="@string/add_alert_title" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/system_header">
        <Preference
            app:key="notice"
            app:title="@string/menu_notice">
            <intent
                android:targetClass="teamprj.antrip.ui.function.NoticeActivity"
                android:targetPackage="teamprj.antrip" />
        </Preference>

        <Preference
            app:key="contact"
            app:title="@string/menu_contact">
            <intent
                android:action="android.intent.action.SENDTO"
                android:data="mailto:wng2641@naver.com" />
        </Preference>

        <Preference
            app:key="open_source"
            app:title="@string/open_source_title">
            <intent
                android:targetClass="teamprj.antrip.ui.settings.LicenseActivity"
                android:targetPackage="teamprj.antrip" />
        </Preference>

        <Preference
            app:key="app_version"
            app:summary="@string/app_version"
            app:title="@string/app_version_title" />

    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
