<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileCorrectActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/acc_correct.emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"

            android:enabled="false"
            android:hint="@string/prompt_email"

            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingTop="30dp"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/acc_correct.pwText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"

            android:hint="@string/prompt_password"
            android:importantForAutofill="no"

            android:inputType="textPassword"
            android:paddingTop="30dp"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/acc_correct.pwCheckText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"

            android:hint="@string/prompt_password_check"
            android:importantForAutofill="no"

            android:inputType="textPassword"
            android:paddingTop="30dp"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/acc_correct.nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"

            android:hint="@string/prompt_name"
            android:importantForAutofill="no"

            android:inputType="textPersonName"
            android:paddingTop="30dp"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/acc_correct.birthText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:ems="10"
            android:hint="@string/prompt_birth"
            android:importantForAutofill="no"
            android:inputType="none"
            android:paddingTop="30dp"
            tools:targetApi="o" />

        <Button
            android:id="@+id/acc_correct.confirmBtn"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="#00000000"
            android:gravity="center"
            android:onClick="update"
            android:padding="16dp"
            android:paddingTop="30dp"
            android:text="@string/action_sign_up_short"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>