<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="450dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.function.InputPlanActivity">

    <View
        android:layout_width="265dp"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:background="#000000"/>

    <TextView
        android:id="@+id/placeTextHeader"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/choice_place" />

    <androidx.cardview.widget.CardView
        android:id="@+id/placeCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/placeTextHeader"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="4dp">
    <fragment
        android:id="@+id/autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
    />
    </androidx.cardview.widget.CardView>

    <CheckBox
        android:id="@+id/accommodationCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/placeCardView"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:text="@string/accommodation" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/prompt_confirm" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/cancel" />
</RelativeLayout>