<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/placeCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/data_name"
                android:textSize="20sp"
                android:gravity="start"
                android:text="@string/name"
                android:singleLine="true"
                android:layout_marginStart="12dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/data_country"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/data_name"
                android:layout_marginStart="14dp"
                android:layout_marginBottom="-20dp"
                android:singleLine="true"
                android:gravity="start"
                android:text="@string/country"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/data_accommodation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:visibility="invisible"
                android:text="@string/accommodation" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>