<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Theme.Dialog"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="#eeeeee"
    android:orientation="vertical">

    <!-- 타이틀바 -->
    <!-- //end 타이틀바 -->

    <!-- Notice -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/auth_add.toolbar"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/auth_add_share"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <EditText
            android:id="@+id/auth_add.emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"

            android:hint="@string/prompt_email"
            android:importantForAutofill="no"

            android:inputType="textEmailAddress"
            tools:targetApi="o" />

    </LinearLayout>
    <!-- Notice -->

    <View
        android:id="@+id/auth_add.view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#66bdbdbd" />

    <!-- 닫기 버튼 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/auth_add.confirmBtn"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="#00000000"
            android:enabled="true"
            android:gravity="center"
            android:onClick="PassResetViaEmail"
            android:padding="16dp"
            android:text="@string/add"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </LinearLayout>
    <!--// 닫기 버튼 -->
</LinearLayout>